third_party/rust/thiserror/tests/ui/source-struct-not-error.stderr
error[E0599]: no method named `as_dyn_error` found for struct `NotError` in the current scope
 --> $DIR/source-struct-not-error.rs:9:5
  |
4 | struct NotError;
  | ----------------
  | |
  | method `as_dyn_error` not found for this
  | doesn't satisfy `NotError: AsDynError`
  | doesn't satisfy `NotError: std::error::Error`
...
9 |     source: NotError,
  |     ^^^^^^ method not found in `NotError`
  |
  = note: the method `as_dyn_error` exists but the following trait bounds were not satisfied:
          `NotError: std::error::Error`
          which is required by `NotError: AsDynError`
